# ORCA-for-Study-of-Organic-Materials

./: CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  ORCA_REVIEWER.md  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: 00-study-roadmap.md  01-setup-and-syntax.md  02-theory.md  03-geometry-optimization.md  04-frequency-ir.md  05-uvvis-assignments.md  06-antioxidant-thermochemistry.md  07-metal-complexes.md  08-troubleshooting.md  09-cheatsheet.md  references.md
examples/antioxidant/: README.md  high_level_sp.inp  paper_route_numfreq.inp  paper_route_opt.inp  paper_route_sp_cu.inp  state_optfreq.inp
examples/geometry/: cu_complex_optfreq.inp  organic_optfreq.inp  organic_preopt.inp
examples/uvvis/: cu_complex_tddft.inp  ligand_tddft.inp
examples/water/: water.xyz  water_sp.inp
notebook_outputs/: calculation_manifest.csv  water.inp
notebooks/: 01_setup_and_input_syntax.ipynb  02_geometry_optimization.ipynb  03_frequency_ir_assignments.ipynb  04_uvvis_transition_assignments.ipynb  05_antioxidant_thermochemistry.ipynb  06_end_to_end_project.ipynb  README.md
sample_data/: antioxidant_enthalpies.csv  sample_freq.out  sample_opt.out  sample_tddft.out
scripts/: run_orca.ps1  run_orca.sh
src/orca_reviewer/: __init__.py  input_builder.py  parsers.py  runner.py  spectra.py  thermochemistry.py
src/orca_reviewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_input_builder.py  test_parsers.py  test_thermochemistry.py
