[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orca-reviewer"
version = "0.1.0"
description = "Tutorial notebooks and parsers for ORCA quantum-chemistry workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ORCA Reviewer contributors"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "nbconvert>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
